# WAFL2025

./: README.md
WAFL2025/: CMakeLists.txt  package.xml
WAFL2025/arduino files/IMU_test/: IMU_test.ino
WAFL2025/arduino files/arduino_manual/: arduino_manual.ino
WAFL2025/arduino files/hello_world/: hello_world.ino
WAFL2025/config/: ekf.yaml  joint_names_WAFL2025.yaml  localization.rviz  mapping.rviz  my_robot_control.yaml  path_planning.rviz  swerve_control.yaml  trial.rviz
WAFL2025/launch/: amcl_localization.launch  base_test_noAMCL.launch  display.launch  gazebo.launch  hector_slam.launch  move_base.launch  move_robot.launch  real.launch  setup_can.sh  trial_urdf.launch
WAFL2025/maps/: first_map.pgm  first_map.yaml  office_map.pgm  office_map.yaml  second_map.yaml.pgm  second_map.yaml.yaml  third_map.pgm  third_map.yaml
WAFL2025/meshes/: base_link(without).STL  base_link.STL  castor.STL  castor_wheel.STL  left_web.STL  left_wheel.STL  right_web.STL  right_wheel.STL
WAFL2025/msg/: SteeringAngles.msg
WAFL2025/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
WAFL2025/scripts/: can_sensory_data.py  can_trnaslate.py  controller_hardware.py  controller_test.py  curvature_calc.py  manual_drive_control.py  middle_man.py  robot_controller.py  supervisor.py  swerve_odometry_node.py  teleop_keyboard.py
WAFL2025/urdf/: WAFL2025.csv  WAFL2025.urdf  WAFL2025.xacro  WAFL2025_hw.urdf
WAFL2025/worlds/: home1.world
(+11 files in other folders)
